--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "functions": {
     "api/index.py": {
-      "runtime": "python3.11"
+      "runtime": "vercel-python@0.10.0"
     }
   },
   "routes": [
     { "src": "/(.*)", "dest": "api/index.py" }
   ]
 }
+
